--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Ibrahim Irfan</title>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <link href="css/main.css" type="text/css" rel="stylesheet"></link>
 
