--- a/index.html
+++ b/index.html
@@ -1,24 +1,17 @@
 <html>
-
 <head>
     <title>Ibrahim Irfan</title>
-
-        <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/main.css" type="text/css" rel="stylesheet"></link>
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
     <link rel="stylesheet" href="remodal/dist/remodal.css">
     <link rel="stylesheet" href="remodal/dist/remodal-default-theme.css">
 		<link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
 </head>
 
 <body>
-    <div class="remodal" data-remodal-id="modal">
-    </div>
+    <div class="remodal" data-remodal-id="modal"></div>
 
     <div class="content remodal-bg">
         <img class="profileImg fadeIn fadeInDown" src="img/headshot.png">
@@ -44,14 +37,11 @@
         <hr>
 
         <div class="subheading bold">Projects</div>
-
-
             <div class="mdl-grid mdl-container">
-                <!-- Populated by js controller -->
+                <!-- Populated by  projectScript.js-->
+                <div class="mdl-cell mdl-cell--4-col"><div project="0" class="mdl-card-square mdl-card"><img src="img/thumbnails/MH1.jpg" class="projectImg"><center><figcaption>Point-To-Speech</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="1" class="mdl-card-square mdl-card"><img src="img/thumbnails/DECA.png" class="projectImg"><center><figcaption>DECA Web Application</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="2" class="mdl-card-square mdl-card"><img src="img/thumbnails/halcyon.jpg" class="projectImg"><center><figcaption>Halcyon</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="3" class="mdl-card-square mdl-card"><img src="img/thumbnails/uog.jpg" class="projectImg"><center><figcaption>University of Guelph Exam Network</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="4" class="mdl-card-square mdl-card"><img src="img/thumbnails/bridgeday.jpg" class="projectImg"><center><figcaption>BridgeDay Conference Website</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="5" class="mdl-card-square mdl-card"><img src="img/thumbnails/balls.jpg" class="projectImg"><center><figcaption>Balls iOS Game</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="6" class="mdl-card-square mdl-card"><img src="img/thumbnails/tu20.jpg" class="projectImg"><center><figcaption>TU20 Website</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="7" class="mdl-card-square mdl-card"><img src="img/thumbnails/tragic.jpg" class="projectImg"><center><figcaption>Tragic Heroes iOS Game</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="8" class="mdl-card-square mdl-card"><img src="img/thumbnails/irhsann.jpg" class="projectImg"><center><figcaption>IRHS Announcements Page</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="9" class="mdl-card-square mdl-card"><img src="img/thumbnails/pinch.jpg" class="projectImg"><center><figcaption>Pinch Perfect</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="10" class="mdl-card-square mdl-card"><img src="img/thumbnails/goat.jpg" class="projectImg"><center><figcaption>Running Goat iOS Game</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="11" class="mdl-card-square mdl-card"><img src="img/thumbnails/chess.jpg" class="projectImg"><center><figcaption>Turing Chess Game</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="12" class="mdl-card-square mdl-card"><img src="img/thumbnails/wheelofpython.jpg" class="projectImg"><center><figcaption>Wheel of Python</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="13" class="mdl-card-square mdl-card"><img src="img/thumbnails/thinktank.jpg" class="projectImg"><center><figcaption>EnTech IRHS Proposal Website</p></center></div></div><div class="mdl-cell mdl-cell--4-col"><div project="14" class="mdl-card-square mdl-card"><img src="img/thumbnails/cup.jpg" class="projectImg"><center><figcaption>TU20 Cup Event Website</p></center></div></div>
+
             </div>
-
-
-
 
         <div class="footer big">
             <center>
@@ -59,23 +49,15 @@
                 <span class="contactMe">
                   <a href="mailto:1ibrahimirfan@gmail.com" target="_blank" class="btn">
                     Contact Me
-                  </a
-                ></span>
+                  </a></span>
             </center>
         </div>
 
     </div>
-
-
+    
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="js/main.js" type "text/javascript"></script>
     <script src="remodal/dist/remodal.min.js"></script>
-
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </body>
-
-
-
-
-
-
-
 </html>
