--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
                         </div>
                         <div class="mdl-cell mdl-cell--4-col">
                            <div project="5" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/bridgeday.jpg" class="projectImg" alt="BridgeDay Conference Website"> 
+                              <img src="img/thumbnails/bridgeday.jpg" class="projectImg" alt="BridgeDay Conference Registration System"> 
                               <center>
-                                 <figcaption>BridgeDay Conference Website</figcaption>
+                                 <figcaption>BridgeDay Conference Registration System</figcaption>
                               </center>
                            </div>
                         </div>
@@ -242,7 +242,7 @@
          </div>
       </div>
       <link href="css/main_2.3.css" type="text/css" rel="stylesheet">
-      <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script> <script src="js/main_2.4.js" type="text/javascript"></script> <script src="js/typing.js" type="text/javascript"></script> <script src="remodal/dist/remodal.min.js"></script> <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-100410300-1','auto');ga('send','pageview');</script> 
+      <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script> <script src="js/main_2.5.js" type="text/javascript"></script> <script src="js/typing.js" type="text/javascript"></script> <script src="remodal/dist/remodal.min.js"></script> <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-100410300-1','auto');ga('send','pageview');</script> 
    </body>
 </html>
 
