--- a/index.html
+++ b/index.html
@@ -64,69 +64,19 @@
                <div class="company">ViceroyMedia</div>
                <div class="position">Software Developer <span class="workDate">Jun '16 - Feb '17 </span></div>
                <div class="jobDesc">
-                  <ul>
-                     <li>Worked with a team to develop the <b>University of Guelph Exam Network</b> web application.</li>
-                     <li>Used JavaScript to integrate the login system with Facebook Login API along with <b>viewing, uploading, and handling of course files.</b></li>
+                 <ul>
+                   <li>Worked with a team to develop the <b>University of Guelph Exam Network</b> web application.</li> <li>Used JavaScript to integrate the login system with Facebook Login API along with <b>viewing, uploading, and handling of course files.</b></li>
                   </ul>
                </div>
                <br>
                <div class="subheading fadeIn">Projects</div>
             </div>
-            <div class="tab">
-               <div class="margined">
-                  <center>
-                     <ul class="tabs">
-                        <li class=" left" type="work"> <a href="#"><img class="projectTypeIcon" src="img/icons/shake.png">Work</a></li>
-                        <li class=" left" type="hack"> <a href="#"><img class="projectTypeIcon" src="img/icons/hack.png">Hackathons</a></li>
-                        <li class=" left" type="personal"> <a href="#"><img class="projectTypeIcon" src="img/icons/light.png">Personal</a></li>
-                        <li class=" left" type="school"> <a href="#"><img class="projectTypeIcon" src="img/icons/school.png">School</a></li>
-                     </ul>
-                  </center>
-               </div>
-               <div class="tab_content">
-                  <div class="tabs_item" style="display: block;">
                      <div class="mdl-grid mdl-container">
                         <div class="mdl-cell mdl-cell--4-col">
-                           <div project="4" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/uog.jpg" class="projectImg" alt="University of Guelph Exam Network"> 
+                           <div project="5" class="mdl-card-square mdl-card">
+                              <img src="img/thumbnails/cannon.jpg" class="projectImg" alt="Self-Aiming Cannon"> 
                               <center>
-                                 <figcaption>University of Guelph Exam Network</figcaption>
-                              </center>
-                           </div>
-                        </div>
-                        <div class="mdl-cell mdl-cell--4-col">
-                           <div project="13" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/geotab.png" class="projectImg" alt="Geotab HR Automation"> 
-                              <center>
-                                 <figcaption>Geotab HR Automation</figcaption>
-                              </center>
-                           </div>
-                        </div>
-                        <div class="mdl-cell mdl-cell--4-col">
-                           <div project="14" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/itee.png" class="projectImg" alt="ITEE Group Canada"> 
-                              <center>
-                                 <figcaption>ITEE Group Canada</figcaption>
-                              </center>
-                           </div>
-                        </div>
-                        <div class="mdl-cell mdl-cell--4-col">
-                           <div project="15" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/zippy.png" class="projectImg" alt="ZippyFix"> 
-                              <center>
-                                 <figcaption>ZippyFix</figcaption>
-                              </center>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="tabs_item">
-                     <div class="mdl-grid mdl-container">
-                        <div class="mdl-cell mdl-cell--4-col">
-                           <div project="11" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/htf.jpg" class="projectImg" alt="Hack the Fridge"> 
-                              <center>
-                                 <figcaption>Hack the Fridge</figcaption>
+                                 <figcaption>Self-Aiming Cannon</figcaption>
                               </center>
                            </div>
                         </div>
@@ -139,17 +89,53 @@
                            </div>
                         </div>
                         <div class="mdl-cell mdl-cell--4-col">
-                           <div project="10" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/pinchUpdate.jpg" class="projectImg" alt="Pinch Perfect"> 
+                           <div project="3" class="mdl-card-square mdl-card">
+                              <img src="img/thumbnails/uog.jpg" class="projectImg" alt="University of Guelph Exam Network"> 
                               <center>
-                                 <figcaption>Pinch Perfect</figcaption>
+                                 <figcaption>University of Guelph Exam Network</figcaption>
                               </center>
                            </div>
                         </div>
-                     </div>
-                  </div>
-                  <div class="tabs_item">
-                     <div class="mdl-grid mdl-container">
+                        <div class="mdl-cell mdl-cell--4-col">
+                           <div project="2" class="mdl-card-square mdl-card">
+                              <img src="img/thumbnails/DECA.png" class="projectImg" alt="DECA Exam Parser"> 
+                              <center>
+                                 <figcaption>DECA Exam Parser</figcaption>
+                              </center>
+                           </div>
+                        </div>
+                        <div class="mdl-cell mdl-cell--4-col">
+                           <div project="9" class="mdl-card-square mdl-card">
+                              <img src="img/thumbnails/chess.jpg" class="projectImg" alt="2 Player Chess Game"> 
+                              <center>
+                                 <figcaption>2 Player Chess</figcaption>
+                              </center>
+                           </div>
+                        </div>
+                        <div class="mdl-cell mdl-cell--4-col">
+                           <div project="10" class="mdl-card-square mdl-card">
+                              <img src="img/thumbnails/geotab.png" class="projectImg" alt="Geotab HR Automation System"> 
+                              <center>
+                                 <figcaption>Geotab HR Automation System</figcaption>
+                              </center>
+                           </div>
+                        </div>
+                        <div class="mdl-cell mdl-cell--4-col">
+                           <div project="4" class="mdl-card-square mdl-card">
+                              <img src="img/thumbnails/bridgeday.jpg" class="projectImg" alt="BridgeDay Conference Registration System"> 
+                              <center>
+                                 <figcaption>BridgeDay Conference Registration System</figcaption>
+                              </center>
+                           </div>
+                        </div>
+                        <div class="mdl-cell mdl-cell--4-col">
+                           <div project="8" class="mdl-card-square mdl-card">
+                              <img src="img/thumbnails/htf.jpg" class="projectImg" alt="Hack the Fridge"> 
+                              <center>
+                                 <figcaption>Hack the Fridge</figcaption>
+                              </center>
+                           </div>
+                        </div>
                         <div class="mdl-cell mdl-cell--4-col">
                            <div project="1" class="mdl-card-square mdl-card">
                               <img src="img/thumbnails/drive.png" class="projectImg" alt="DriveBud"> 
@@ -159,60 +145,15 @@
                            </div>
                         </div>
                         <div class="mdl-cell mdl-cell--4-col">
-                           <div project="2" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/DECA.png" class="projectImg" alt="DECA Web Application"> 
+                           <div project="7" class="mdl-card-square mdl-card">
+                              <img src="img/thumbnails/pinchUpdate.jpg" class="projectImg" alt="Pinch Perfect"> 
                               <center>
-                                 <figcaption>DECA Web Application</figcaption>
-                              </center>
-                           </div>
-                        </div>
-                        <div class="mdl-cell mdl-cell--4-col">
-                           <div project="3" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/halcyon.jpg" class="projectImg" alt="Halcyon"> 
-                              <center>
-                                 <figcaption>Halcyon</figcaption>
-                              </center>
-                           </div>
-                        </div>
-                        <div class="mdl-cell mdl-cell--4-col">
-                           <div project="5" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/bridgeday.jpg" class="projectImg" alt="BridgeDay Conference Registration System"> 
-                              <center>
-                                 <figcaption>BridgeDay Conference Registration System</figcaption>
+                                 <figcaption>Pinch Perfect</figcaption>
                               </center>
                            </div>
                         </div>
                         <div class="mdl-cell mdl-cell--4-col">
                            <div project="6" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/balls.jpg" class="projectImg" alt="Balls iOS Game"> 
-                              <center>
-                                 <figcaption>Balls iOS Game</figcaption>
-                              </center>
-                           </div>
-                        </div>
-                        <div class="mdl-cell mdl-cell--4-col">
-                           <div project="7" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/tu20.jpg" class="projectImg" alt="TU20 Website"> 
-                              <center>
-                                 <figcaption>TU20 Website</figcaption>
-                              </center>
-                           </div>
-                        </div>
-                        <div class="mdl-cell mdl-cell--4-col"></div>
-                     </div>
-                  </div>
-                  <div class="tabs_item">
-                     <div class="mdl-grid mdl-container">
-                        <div class="mdl-cell mdl-cell--4-col">
-                           <div project="8" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/cannon.jpg" class="projectImg" alt="Self-Aiming Cannon"> 
-                              <center>
-                                 <figcaption>Self-Aiming Cannon</figcaption>
-                              </center>
-                           </div>
-                        </div>
-                        <div class="mdl-cell mdl-cell--4-col">
-                           <div project="9" class="mdl-card-square mdl-card">
                               <img src="img/thumbnails/tragic.jpg" class="projectImg" alt="Tragic Heroes iOS Game"> 
                               <center>
                                  <figcaption>Tragic Heroes iOS Game</figcaption>
@@ -220,19 +161,18 @@
                            </div>
                         </div>
                         <div class="mdl-cell mdl-cell--4-col">
-                           <div project="12" class="mdl-card-square mdl-card">
-                              <img src="img/thumbnails/chess.jpg" class="projectImg" alt="Turing Chess Game"> 
+                           <div project="11" class="mdl-card-square mdl-card">
+                              <img src="img/thumbnails/itee.png" class="projectImg" alt="ITEE Group Canada"> 
                               <center>
-                                 <figcaption>Turing Chess Game</figcaption>
+                                 <figcaption>ITEE Group Canada</figcaption>
                               </center>
                            </div>
                         </div>
+                        
                         <div class="mdl-cell mdl-cell--4-col"></div>
                      </div>
                   </div>
                </div>
-            </div>
-         </div>
          <div class="footerContent">
             <center>
                <div class="footer big">
