--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          <div class="content remodal-bg">
             <div class="margined">
                <div class="subheading fadeIn">About Me</div>
-               <div class="paragraph">Hi! I'm a software developer studying Software Engineering at the University of Waterloo. I'm currently seeking a 4 month software development internship form May - August 2018.<br><br>Looking for <a href='/notes.html'>course notes?</a></div>
+               <div class="paragraph">Hi! I'm a software developer studying Software Engineering at the University of Waterloo. I'm currently seeking a 4 month software development internship from May - August 2018.<br><br>Looking for <a href='/notes.html'>course notes?</a></div>
 
                <div class="subheading fadeIn">Work Experience</div>
                <div class="company">Geotab</div>
