Target blank for links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                   <img class="profileImg fadeIn fadeInDown" src="img/headshot.jpg" alt="Ibrahim Irfan"> 
                   <div class="name big typing"> <span class="txt-rotate" data-period="500" data-rotate='["Ibrahim Irfan"]'></span><span class="blinking-cursor">|</span></div>
                   <div class="title small">Software Developer</div>
-                  <div class="buttons"> <a href="https://www.linkedin.com/in/ibrahim-i-39496712a/"> <img class="social" src="img/linkedin.png" alt="LinkedIn"> </a> <a href="https://github.com/IbrahimIrfan"> <img class="social" src="img/github.png" alt="GitHub"> </a> <a href="/resume.pdf"> <img class="social" src="img/resume.png" alt="Resume"> </a></div>
+                  <div class="buttons"> <a href="https://www.linkedin.com/in/ibrahim-i-39496712a/" target="_blank"> <img class="social" src="img/linkedin.png" alt="LinkedIn"> </a> <a href="https://github.com/IbrahimIrfan" target="_blank"> <img class="social" src="img/github.png" alt="GitHub"> </a> <a href="/resume.pdf" target="_blank"> <img class="social" src="img/resume.png" alt="Resume"> </a></div>
                   <hr width="75%" style="margin-bottom: 20px !important;">
                </center>
             </div>
