Updted job descriptions

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
                <div class="position">Software Developer <span class="workDate">Jun - Aug '17</span></div>
                <div class="jobDesc">
                   <ul>
-                     <li>Led the development of an <b> HR automation system</b> using Google Apps Script, in use today. </li>
-                     <li><b >Significantly increased team efficiency </b>by automating redundant tasks such as resume identification/parsing, emails, and scheduling calendar events.</li>
+                    <li>Led the development of an HR automation system which <b>drastically reduced
+                        redundancy </b>in the hiring process for <b>one of the fastest growing company's in Canada</b></li>
+                     <li>Significantly increased company efficiency through creating an accurate resume parser
+and automating emails and calendar events with Google Apps Script.</li>
                   </ul>
                </div>
                <br>
@@ -56,8 +58,9 @@
                <div class="position">Web Developer <span class="workDate">May '17 - Present</span></div>
                <div class="jobDesc">
                   <ul>
-                     <li><b>Directly coordinate</b> with clients to develop websites and designs for their small businesses.</li>
-                     <li>Projects include creating a dynamic website for ITEE Group Canada with JavaScript and PHP </li>
+                     <li>Directly coordinated with clients to develop websites for their small businesses.</li>
+                     <li>Created an interactive website for ITEE Group Canada to streamline their client-based
+service. </li>
                   </ul>
                </div>
                <br>
@@ -65,7 +68,8 @@
                <div class="position">Software Developer <span class="workDate">Jun '16 - Feb '17 </span></div>
                <div class="jobDesc">
                  <ul>
-                   <li>Worked with a team to develop the <b>University of Guelph Exam Network</b> web application.</li> <li>Used JavaScript to integrate the login system with Facebook Login API along with <b>viewing, uploading, and handling of course files.</b></li>
+                   <li>Worked with a team to develop an Exam Network web application for <b>over 20,000
+                       students </b>at the University of Guelph</li> <li>Used JavaScript to integrate the login system with Facebook Login API along with <b>viewing, uploading, and handling of course files.</b></li>
                   </ul>
                </div>
                <br>
