--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ and automating emails and calendar events with Google Apps Script.</li>
                   <ul>
                      <li>Directly coordinated with clients to develop websites for their small businesses.</li>
                      <li>Created an interactive website for ITEE Group Canada to streamline their client-based
-service. </li>
+service with HTML, CSS, JS, and PHP. </li>
                   </ul>
                </div>
                <br>
