--- a/index.html
+++ b/index.html
@@ -175,6 +175,18 @@ service with HTML, CSS, JS, and PHP. </li>
                         
                         <div class="mdl-cell mdl-cell--4-col"></div>
                      </div>
+
+                     <div class="margined">
+               <div class="subheading fadeIn">Achievements</div>
+               <div class="accTitle">Loran Scholarship Semi-Finalist</div>
+               <div class="accDesc">Recognized in the top 8% of applicants for Canada’s most prestigious scholarship</div>
+               <center><a href="http://www.loranscholar.ca/" target="_blank"> <img src="img/loran.png" width="30%"></a></center>
+               <br>
+               <div class="accTitle">SHAD Valley Alumni</div>
+               <div class="accDesc">One of 750 youth to attend SHAD Valley in 2017, and participated in the national stage of SHAD Cup.</div>
+               <center><a href="http://www.shad.ca/" target="_blank"> <img src="img/shad.png" width="25%"></a></center>
+             </div>
+
                   </div>
                </div>
          <div class="footerContent">
