--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ service with HTML, CSS, JS, and PHP. </li>
                      <div class="margined">
                <div class="subheading fadeIn">Achievements</div>
                <div class="accTitle">Loran Scholarship Semi-Finalist</div>
-               <div class="accDesc">Recognized in the top 8% of applicants for Canada’s most prestigious scholarship</div>
+               <div class="accDesc">Recognized in the top 8% of applicants for Canada’s most prestigious scholarship.</div>
                <center><a href="http://www.loranscholar.ca/" target="_blank"> <img src="img/loran.png" width="30%"></a></center>
                <br>
                <div class="accTitle">SHAD Valley Alumni</div>
