added notes to bottom

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          <div class="content remodal-bg">
             <div class="margined">
                <div class="subheading fadeIn">About Me</div>
-               <div class="paragraph">Hi! I'm a software developer studying Software Engineering at the University of Waterloo. I'm currently seeking a 4 month software development internship from May - August 2018.<br><br>Looking for <a href='/notes.html'>course notes?</a></div>
+               <div class="paragraph">Hi! I'm a software developer studying Software Engineering at the University of Waterloo. I'm currently seeking a 4 month software development internship from May - August 2018.</div>
                <div class="subheading fadeIn">Work Experience</div>
                <div class="company">Geotab</div>
                <div class="position">Software Developer <span class="workDate">Jun - Aug '17</span></div>
@@ -185,6 +185,16 @@ service with HTML, CSS, JS, and PHP. </li>
                <div class="accTitle">SHAD Valley Alumni</div>
                <div class="accDesc">One of 750 youth to attend SHAD Valley in 2017, and participated in the national stage of SHAD Cup.</div>
                <center><a href="http://www.shad.ca/" target="_blank"> <img src="img/shad.png" width="25%"></a></center>
+               <div class="subheading fadeIn">Course Notes</div>
+               <div class="accTitle">Fall 2017</div>
+               <div class="jobDesc">
+                  <ul>
+                    <li><a href="/notes/MATH115.pdf" target ="_blank">MATH 115 - Linear Algebra for Engineering</a></li>
+                      <li><a href="/notes/MATH117.pdf" target ="_blank">MATH 117 - Calculus 1 for Engineering</a></li>
+                      <li><a href="/notes/MATH135.pdf" target ="_blank">MATH 135 - Algebra for Honours Mathematics</a></li>
+                      <li><a href="/notes/ECE105.pdf" target ="_blank">ECE 105 - Classical Mechanics</a></li>
+                  </ul>
+               </div>
              </div>
 
                   </div>
