--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                <div class="subheading fadeIn">About Me</div>
                <div class="paragraph">Hi! I'm a software developer studying Software Engineering at the University of Waterloo. I'm currently seeking a 4 month software development internship from May - August 2018.</div>
                <div class="subheading fadeIn">Work Experience</div>
-               <div class="company">Geotab</div>
-               <div class="position">Software Developer <span class="workDate">Jun - Aug '17</span></div>
+               <div class="position">Geotab - Software Developer <span class="workDate">Jun - Aug '17</span></div>
                <div class="jobDesc">
                   <ul>
                     <li>Led the development of an HR automation system which <b>drastically reduced
@@ -54,8 +53,7 @@ and automating emails and calendar events with Google Apps Script.</li>
                   </ul>
                </div>
                <br>
-               <div class="company">Freelance</div>
-               <div class="position">Web Developer <span class="workDate">May '17 - Present</span></div>
+               <div class="position">Freelance - Web Developer <span class="workDate">May '17 - Present</span></div>
                <div class="jobDesc">
                   <ul>
                      <li>Directly coordinated with clients to develop websites for their small businesses.</li>
@@ -64,8 +62,7 @@ service with HTML, CSS, JS, and PHP. </li>
                   </ul>
                </div>
                <br>
-               <div class="company">ViceroyMedia</div>
-               <div class="position">Software Developer <span class="workDate">Jun '16 - Feb '17 </span></div>
+               <div class="position">ViceroyMedia - Software Developer <span class="workDate">Jun '16 - Feb '17 </span></div>
                <div class="jobDesc">
                  <ul>
                    <li>Worked with a team to develop an Exam Network web application for <b>over 20,000
