--- a/index.html
+++ b/index.html
@@ -184,13 +184,11 @@ service with HTML, CSS, JS, and PHP. </li>
                <center><a href="http://www.shad.ca/" target="_blank"> <img src="img/shad.png" width="25%"></a></center>
                <div class="subheading fadeIn">Course Notes</div>
                <div class="accTitle">Fall 2017</div>
-               <div class="jobDesc">
-                  <ul>
-                    <li><a href="/notes/MATH115.pdf" target ="_blank">MATH 115 - Linear Algebra for Engineering</a></li>
-                      <li><a href="/notes/MATH117.pdf" target ="_blank">MATH 117 - Calculus 1 for Engineering</a></li>
-                      <li><a href="/notes/MATH135.pdf" target ="_blank">MATH 135 - Algebra for Honours Mathematics</a></li>
-                      <li><a href="/notes/ECE105.pdf" target ="_blank">ECE 105 - Classical Mechanics</a></li>
-                  </ul>
+               <div class="accDesc">
+                    <a class="noteLink" href="/notes/MATH115.pdf" target ="_blank">MATH 115 - Linear Algebra for Engineering</a>
+                      <br><a class="noteLink" href="/notes/MATH117.pdf" target ="_blank">MATH 117 - Calculus 1 for Engineering</a>
+                      <br><a class="noteLink" href="/notes/MATH135.pdf" target ="_blank">MATH 135 - Algebra for Honours Mathematics</a>
+                      <br><a class="noteLink" href="/notes/ECE105.pdf" target ="_blank">ECE 105 - Classical Mechanics</a>
                </div>
              </div>
 
