--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@ service with HTML, CSS, JS, and PHP. </li>
 
                      <div class="margined">
                <div class="subheading fadeIn">Achievements</div>
+               <div class="accTitle">University of Waterloo - 3.98 GPA</div>
+               <div class="accDesc">93% average (3.98 GPA) at the University of Waterloo for Software Engineering.</div>
+               <center><a href="https://uwaterloo.ca/future-students/programs/software-engineering" target="_blank"> <img src="img/waterloo.png" width="30%"></a></center>
                <div class="accTitle">Loran Scholarship Semi-Finalist</div>
                <div class="accDesc">Recognized in the top 8% of applicants for Canada’s most prestigious scholarship.</div>
                <center><a href="http://www.loranscholar.ca/" target="_blank"> <img src="img/loran.png" width="30%"></a></center>
