--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ service with HTML, CSS, JS, and PHP. </li>
                <center><a href="http://www.loranscholar.ca/" target="_blank"> <img src="img/loran.png" width="30%"></a></center>
                <br>
                <div class="accTitle">SHAD Valley Alumni</div>
-               <div class="accDesc">One of 750 youth to attend SHAD Valley in 2017, and participated in the national stage of SHAD Cup.</div>
+               <div class="accDesc">One of 750 youth to attend SHAD Valley in 2017. Participated in the national stage of SHAD Cup and CBC interviewee.</div>
                <center><a href="http://www.shad.ca/" target="_blank"> <img src="img/shad.png" width="25%"></a></center>
                <div class="subheading fadeIn">Course Notes</div>
                <div class="accTitle">Fall 2017</div>
