--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <ul>
                     <li>Led the development of an HR automation system which <b>drastically reduced
                         redundancy </b>in the hiring process for <b>one of the fastest growing company's in Canada</b></li>
-                     <li>Significantly increased company efficiency through creating an accurate resume parser
+                    <li>Significantly increased company efficiency through creating an accurate <b>resume parser</b>
 and automating emails and calendar events with Google Apps Script.</li>
                   </ul>
                </div>
@@ -57,8 +57,8 @@ and automating emails and calendar events with Google Apps Script.</li>
                <div class="jobDesc">
                   <ul>
                      <li>Directly coordinated with clients to develop websites for their small businesses.</li>
-                     <li>Created an interactive website for ITEE Group Canada to streamline their client-based
-service with HTML, CSS, JS, and PHP. </li>
+                     <li>Created an interactive website for ITEE Group Canada to <b>streamline their client-based
+                         service </b>with HTML, CSS, JS, and PHP. </li>
                   </ul>
                </div>
                <br>
@@ -66,7 +66,7 @@ service with HTML, CSS, JS, and PHP. </li>
                <div class="jobDesc">
                  <ul>
                    <li>Worked with a team to develop an Exam Network web application for <b>over 20,000
-                       students </b>at the University of Guelph</li> <li>Used JavaScript to integrate the login system with Facebook Login API along with <b>viewing, uploading, and handling of course files.</b></li>
+                       students </b>at the University of Guelph.</li> <li>Implemented the file system for course materials using JavaScript, including <b>viewing, uploading, and downloading files.</b></li>
                   </ul>
                </div>
                <br>
