--- a/index.html
+++ b/index.html
@@ -112,11 +112,10 @@
                 <div class="position">Geotab - Software Developer <span class="workDate">Jun - Aug '17</span></div>
                 <div class="jobDesc">
                     <ul>
-                        <li>Led the development of an HR automation system which <b>drastically reduced
-                        redundancy </b>in the hiring process for <b>one of the fastest growing company's in Canada</b></li>
-                        <li>Significantly increased company efficiency through creating
-                            an accurate <b>resume parser</b> and automating emails
-                            and calendar events with Google Apps Script.</li>
+                        <li>Led the development of an HR automation system which drastically reduced redundancy
+in the hiring process for one of the fastest growing companies in Canada.</li>
+                        <li>Significantly increased company efficiency through creating an accurate resume parser
+                          and automating emails and calendar events with <b> Google Apps Script.</b></li>
                     </ul>
                 </div>
                 <br>
@@ -125,20 +124,19 @@
                     <ul>
                         <li>Directly coordinated with clients to develop websites for
                             their small businesses.</li>
-                        <li>Created an interactive website for ITEE Group Canada to
-                            <b>streamline their client-based
-                         service </b>with HTML, CSS, JS, and PHP. </li>
+                        <li>Created a website for a consulting firm, ITEE Group Canada, to streamline their client-based
+                          service using <b>HTML, CSS, JS, and PHP.</b></li>
                     </ul>
                 </div>
                 <br>
                 <div class="position">ViceroyMedia - Software Developer <span class="workDate">Jun '16 - Feb '17 </span></div>
                 <div class="jobDesc">
                     <ul>
-                        <li>Worked with a team to develop an Exam Network web application
+                        <li>Collaborated with a team to develop an Exam Network web application
                             for <b>over 20,000
                        students </b>at the University of Guelph.</li>
-                        <li>Implemented the file system for course materials using
-                            JavaScript, including <b>viewing, uploading, and downloading files.</b></li>
+                   <li>Implemented a file system for course materials using <b>JavaScript</b>, including viewing,
+uploading, and downloading files.</b></li>
                     </ul>
                 </div>
                 <br>
