update resume with decile

--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@ uploading, and downloading files.</b></li>
 
             <div class="margined">
                 <div class="subheading fadeIn">Achievements</div>
-                <div class="accTitle">University of Waterloo - 3.98 GPA</div>
-                <div class="accDesc">93% average (3.98 GPA) at the University of Waterloo for Software
+                <div class="accTitle">University of Waterloo - Top Decile</div>
+                <div class="accDesc">93% average (3.98 GPA) and top decile at the University of Waterloo for Software
                     Engineering.</div>
                 <center>
                     <a href="https://uwaterloo.ca/future-students/programs/software-engineering"
