--- a/index.html
+++ b/index.html
@@ -273,6 +273,14 @@ uploading, and downloading files.</b></li>
                     <br><a class="noteLink" href="/notes/MATH135.pdf" target="_blank">MATH 135 - Algebra for Honours Mathematics</a>
                     <br><a class="noteLink" href="/notes/ECE105.pdf" target="_blank">ECE 105 - Classical Mechanics</a>
                 </div>
+
+                <div class="accTitle">Winter 2018</div>
+                <div class="accDesc">
+                    <a class="noteLink" href="/notes/MATH119.pdf" target="_blank">MATH 119 - Calculus 2 for Engineering</a>
+                    <br><a class="noteLink" href="/notes/ECE106.pdf" target="_blank">ECE 106 - Electricity and Magnetism</a>
+                    <br><a class="noteLink" href="/notes/ECE140.pdf" target="_blank">ECE 140 - Linear Circuits</a>
+                    <br><a class="noteLink" href="/notes/ECE124.pdf" target="_blank">ECE 124 - Digital Circuits and Systems</a>
+                </div>
             </div>
 
         </div>
