--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ uploading, and downloading files.</b></li>
                 <center>
                     <a href="http://www.shad.ca/" target="_blank"> <img src="img/shad.png" width="25%"></a>
                 </center>
-                <div class="subheading fadeIn">Course Notes</div>
+                <div class="subheading fadeIn" id="notes">Course Notes</div>
                 <div class="accTitle">Fall 2017</div>
                 <div class="accDesc">
                     <a class="noteLink" href="/notes/MATH115.pdf" target="_blank">MATH 115 - Linear Algebra for Engineering</a>
