remove job plea :)

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
             <div class="margined">
                 <div class="subheading fadeIn">About Me</div>
                 <div class="paragraph">Hi! I'm a software developer studying Software Engineering at the
-                    University of Waterloo. I'm currently seeking a 4 month software
-                    development internship from May - August 2018.</div>
+                    University of Waterloo.</div>
                 <div class="subheading fadeIn">Work Experience</div>
                 <div class="position">Geotab - Software Developer <span class="workDate">Jun - Aug '17</span></div>
                 <div class="jobDesc">
