--- a/index.html
+++ b/index.html
@@ -84,15 +84,13 @@
                     <hr width="75%">
                     <img class="profileImg fadeIn fadeInDown" src="img/headshot.jpg" alt="Ibrahim Irfan">
                     <div class="name big typing"> <span class="txt-rotate" data-period="500" data-rotate='["Ibrahim Irfan"]'></span>
-                        <span
-                            class="blinking-cursor">|</span>
+                        <span class="blinking-cursor">|</span>
                     </div>
                     <div class="title small">Software Developer</div>
                     <div class="buttons">
-                        <a href="https://www.linkedin.com/in/ibrahim-i-39496712a/"
-                            target="_blank"> <img class="social" src="img/linkedin.png" alt="LinkedIn">                            </a>
+                        <a href="https://www.linkedin.com/in/ibrahim-i-39496712a/" target="_blank"> <img class="social" src="img/linkedin.png" alt="LinkedIn">                            </a>
                         <a href="https://github.com/IbrahimIrfan" target="_blank">
-                        <img class="social" src="img/github.png" alt="GitHub">                            </a>
+                            <img class="social" src="img/github.png" alt="GitHub">                            </a>
                         <a href="/resume.pdf" target="_blank"> <img class="social" src="img/resume.png" alt="Resume">                            </a>
                     </div>
                     <hr width="75%" style="margin-bottom: 20px !important;">
@@ -108,13 +106,21 @@
                 <div class="paragraph">Hi! I'm a software developer studying Software Engineering at the
                     University of Waterloo.</div>
                 <div class="subheading fadeIn">Work Experience</div>
+                <div class="position">Thomson Reuters - Software Developer <span class="workDate">May - Aug '18</span></div>
+                <div class="jobDesc">
+                    <ul>
+                        <li>Coming soon...</li>
+                    </ul>
+                </div>
                 <div class="position">Geotab - Software Developer <span class="workDate">Jun - Aug '17</span></div>
                 <div class="jobDesc">
                     <ul>
-                        <li>Led the development of an HR automation system which drastically reduced redundancy
-in the hiring process for one of the fastest growing companies in Canada.</li>
-                        <li>Significantly increased company efficiency through creating an accurate resume parser
-                          and automating emails and calendar events with <b> Google Apps Script.</b></li>
+                        <li>Led the development of an HR automation system which drastically
+                            reduced redundancy in the hiring process for one of
+                            the fastest growing companies in Canada.</li>
+                        <li>Significantly increased company efficiency through creating
+                            an accurate resume parser and automating emails and
+                            calendar events with <b> Google Apps Script.</b></li>
                     </ul>
                 </div>
                 <br>
@@ -123,19 +129,20 @@ in the hiring process for one of the fastest growing companies in Canada.</li>
                     <ul>
                         <li>Directly coordinated with clients to develop websites for
                             their small businesses.</li>
-                        <li>Created a website for a consulting firm, ITEE Group Canada, to streamline their client-based
-                          service using <b>HTML, CSS, JS, and PHP.</b></li>
+                        <li>Created a website for a consulting firm, ITEE Group Canada,
+                            to streamline their client-based service using <b>HTML, CSS, JS, and PHP.</b></li>
                     </ul>
                 </div>
                 <br>
                 <div class="position">ViceroyMedia - Software Developer <span class="workDate">Jun '16 - Feb '17 </span></div>
                 <div class="jobDesc">
                     <ul>
-                        <li>Collaborated with a team to develop an Exam Network web application
-                            for <b>over 20,000
+                        <li>Collaborated with a team to develop an Exam Network web
+                            application for <b>over 20,000
                        students </b>at the University of Guelph.</li>
-                   <li>Implemented a file system for course materials using <b>JavaScript</b>, including viewing,
-uploading, and downloading files.</b></li>
+                        <li>Implemented a file system for course materials using <b>JavaScript</b>,
+                            including viewing, uploading, and downloading files.</b>
+                        </li>
                     </ul>
                 </div>
                 <br>
@@ -245,12 +252,14 @@ uploading, and downloading files.</b></li>
             <div class="margined">
                 <div class="subheading fadeIn">Achievements</div>
                 <div class="accTitle">University of Waterloo - Top Decile</div>
-                <div class="accDesc">93% average (3.98 GPA) and top decile at the University of Waterloo for Software
-                    Engineering.</div>
+                <div class="accDesc">93% average (3.98 GPA) and top decile at the University of Waterloo
+                    for Software Engineering.
+                </div>
                 <br>
                 <div class="accTitle">Loran Scholarship Semi-Finalist</div>
                 <div class="accDesc">Recognized in the top 8% of applicants for Canada’s most prestigious
-                    scholarship.</div>
+                    scholarship.
+                </div>
                 <br>
                 <div class="accTitle">SHAD Valley Alumni</div>
                 <div class="accDesc">One of 750 youth to attend SHAD Valley in 2017. CBC interviewee
