--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="js/particles.min.js" type="text/javascript"></script>
+    <script src="js/projects.js" type="text/javascript"></script>
     <script src="js/main_3.0.js" type="text/javascript"></script>
     <script src="js/typing.js" type="text/javascript"></script>
     <script src="remodal/dist/remodal.min.js"></script>
