--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </script>
 </head>
 
-<body>
+<body ng-app="portfolio">
     <div class="loader-wrapper">
         <div class="loader">
             <div class="inner one"></div>
@@ -148,7 +148,7 @@
                 <br>
                 <div class="subheading fadeIn">Projects</div>
             </div>
-            <div class="mdl-grid mdl-container">
+            <div ng-controller="projects" class="mdl-grid mdl-container">
                 <div class="mdl-cell mdl-cell--4-col">
                     <div project="5" class="mdl-card-square mdl-card">
                         <img src="img/thumbnails/cannon.jpg" class="projectImg" alt="Self-Aiming Cannon">
@@ -298,6 +298,7 @@
     <script src="js/particles.min.js" type="text/javascript"></script>
     <script src="js/projects.js" type="text/javascript"></script>
     <script src="js/main_3.0.js" type="text/javascript"></script>
+    <script src="js/main_1.0.js" type="text/javascript"></script>
     <script src="js/typing.js" type="text/javascript"></script>
     <script src="remodal/dist/remodal.min.js"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
