--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
             <div class="langs">{{currentProject.languages.join(', ')}}</div>
             <br>
-            <p class="projectDesc">{{currentProject.description}}</p>
+            <p class="projectDesc" ng-bind-html="currentProject.description"></p>
 
             <button data-remodal-action="confirm" class="remodal-confirm">O K</button>
         </div>
