--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"
         type="text/javascript">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.9/angular-sanitize.js"
+        type="text/javascript">
+
         < script >
             ! function()
             {
@@ -117,7 +120,7 @@
 
             <div class="langs">{{currentProject.languages.join(', ')}}</div>
             <br>
-            <p class="projectDesc" ng-bind="currentProject.description"></p>
+            <p class="projectDesc" ng-bind-html="currentProject.description"></p>
 
             <button data-remodal-action="confirm" class="remodal-confirm">O K</button>
         </div>
