--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <input ng-if="$index != 0" name="cs_anchor1" ng-repeat="img in currentProject.images"
                         id="cs_slide1_{{$index}}" type="radio" class="cs_anchor slide">
                     <ul>
-                        <li ng-if="$index == 0" ng-repeat="img in currentProject.images" class="cs_skeleton'">
+                        <li ng-if="$index == 0" ng-repeat="img in currentProject.images" class="cs_skeleton">
                             <img src="cssslider_files/csss_images1/{{img}}" style="width: 100%;" alt="{{currentProject.title}}"
                                 title="{{currentProject.title}}">
                         </li>
