--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                     <input ng-if="$index != 0" name="cs_anchor1" ng-repeat="img in currentProject.images"
                         id="cs_slide1_{{$index}}" type="radio" class="cs_anchor slide">
                     <ul>
-                        <li ng-if="$index == 0" ng-repeat="img in currentProject.images" class="cs_skeleton">
-                            <img src="cssslider_files/csss_images1/{{img}}" style="width: 100%;" alt="{{currentProject.title}}"
+                        <li class="cs_skeleton">
+                            <img src="cssslider_files/csss_images1/{{currentProject.images[0]}}" style="width: 100%;" alt="{{currentProject.title}}"
                                 title="{{currentProject.title}}">
                         </li>
-						<li ng-if="$index != 0" ng-repeat="img in currentProject.images" class="num{{$index}} img slide">
+						<li ng-repeat="img in currentProject.images" class="num{{$index}} img slide">
                             <img src="cssslider_files/csss_images1/{{img}}" style="width: 100%;" alt="{{currentProject.title}}"
                                 title="{{currentProject.title}}">
                         </li>
