fixed projectClickedon page load

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </center>
             </div>
             <div id="downArrowWrapper">
-				<center> <img ng-mouseover="currentArrow = !currentArrow" id="downArrow" src="{{arrows[currentArrow]}}"></center>
+				<center> <img ng-click="" ng-mouseover="currentArrow = !currentArrow" id="downArrow" src="{{arrows[currentArrow]}}"></center>
             </div>
         </div>
         <div class="content remodal-bg">
