--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 </center>
             </div>
             <div id="downArrowWrapper">
-				<center> <img ng-init="currentArrow=0" ng-click="moveDown()" ng-mouseleave="currentArrow = !currentArrow" id="downArrow" src="{{arrows[currentArrow | 0]}}"></center>
+				<center> <img ng-init="currentArrow=0" ng-click="moveDown()" ng-mouseleave="currentArrow = inv(currentArrow)" id="downArrow" src="{{arrows[currentArrow]}}"></center>
             </div>
         </div>
         <div class="content remodal-bg">
