--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     <link rel="stylesheet" href="remodal/dist/remodal-default-theme.css">
     <link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"
-        type="text/javascript">
+		type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-scroll/1.0.2/angular-scroll.min.js"
-        type="text/javascript">
-        < script >
+        type="text/javascript"></script>
+
+        <script>
             ! function()
             {
                 var t;
