--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 		type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-scroll/1.0.2/angular-scroll.min.js"
         type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-animate.min.js"
+        type="text/javascript"></script>
+
 
         <script>
             ! function()
