--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 </head>
 
 <body ng-app="portfolio" ng-controller="projects">
-    <div class="loader-wrapper">
-        <div class="loader" ng-if="!loaded">
+    <div ng-if="!loaded" class="loader-wrapper">
+        <div class="loader">
             <div class="inner one"></div>
             <div class="inner two"></div>
             <div class="inner three"></div>
