ng-animate debugging

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </head>
 
 <body ng-app="portfolio" ng-controller="projects">
-    <div ng-hide="loading" class="loader-wrapper">
+    <div ng-animate=" 'animate' " class="loader-wrapper">
         <div class="loader">
             <div class="inner one"></div>
             <div class="inner two"></div>
