--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		type="text/javascript"></script>
     <script src="https://cdnjs.cloudfla	re.com/ajax/libs/angular-scroll/1.0.2/angular-scroll.min.js"
         type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.9/angular-animate.min.js"
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.js"
         type="text/javascript"></script>
 
 
