--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="headerContent">
                 <center>
                     <hr width="75%">
-                    <img class="profileImg fadeIn fadeInDown" src="img/headshot.jpg" alt="Ibrahim Irfan">
+                    <img class="profileImg fadeIn" src="img/headshot.jpg" alt="Ibrahim Irfan">
                     <div class="name big typing"> <span class="txt-rotate" data-period="500" data-rotate='["Ibrahim Irfan"]'></span>
                         <span class="blinking-cursor">|</span>
                     </div>
